Title change attempt #2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Zuurix.GitHub.io</title>
+    <title>Zuurix's homepage - Home to many indie games</title>
   </head>
 
   <body>
