--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Zuurix's homepage - Home to many indie games</title>
+    <title>Zuurix's Homepage</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Zuurix">View on GitHub</a>
 
-          <h1 id="project_title">Zuurix.GitHub.io</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Zuurix's Homepage</h1>
+          <h2 id="project_tagline">Home to awesome indie games</h2>
 
         </header>
     </div>
