Removed link to GitHub

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
       </section>
     </div>
 
-
-
-    
-
+ <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="">Zuurix's Homepage</a></p>
+      </footer>
+    </div>
   </body>
 </html>
