--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
  <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="">Zuurix's Homepage</a></p>
+        <p>Published with <a href="http://store.steampowered.com/app/465020/">Zuurix's Homepage</a></p>
       </footer>
     </div>
+    
   </body>
 </html>
