--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
  <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://store.steampowered.com/app/465020/">Zuurix's Homepage</a></p>
+        <p><a href="#" class="scrollup">Scroll</a></p>
       </footer>
     </div>
     
