Attempt to add navigation bar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Zuurix's homepage : ">
+    <meta name="description" content="Zuurix's homepage">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -20,6 +20,7 @@
 
           <h1 id="project_title">Zuurix's Homepage</h1>
           <h2 id="project_tagline">Home to awesome indie games</h2>
+          <h3 id="navigation">News Games About</h3>
 
         </header>
     </div>
