--- a/games.html
+++ b/games.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html>
 
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Zuurix's homepage">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Zuurix's Homepage</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/Zuurix">View on GitHub</a>
+
+          <h1 id="project_title">Zuurix's Homepage</h1>
+          <h2 id="project_tagline">Games</h2>
+          <h3 id="navigation">News Games About</h3>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="sector-six-game-description" class="anchor" href="#sector-six-game-description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sector Six</h3>
+
+<p>Sector Six is an elegant and innovative sci-fi RPG and shoot 'em up hybrid.</p>
+
+      </section>
+    </div>
+
+ <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p><a href="#" class="scrollup">Top</a></p>
+      </footer>
+    </div>
+    
+  </body>
+</html>
