--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Zuurix">View on GitHub</a>
+          <!-- <a id="forkme_banner" href="https://github.com/Zuurix">View on GitHub</a> -->
 
           <h1 id="project_title">Zuurix's Homepage</h1>
           <h2 id="project_tagline">Home to awesome indie games</h2>
-          <h3 id="navigation">News Games About</h3>
+          <h2 href="https://zuurix.github.io/games.html" class="link"> Games </h2>
 
         </header>
     </div>
