--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
 	<h1>Zuurix's Homepage</h1>
-	<p>Home of awesome indie games</p>
+	<p>Home for awesome indie games</p>
 </div><!-- /.blurb -->
