--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Zuurix's Homepage
 ---
 <div class="blurb">
 	<h1>Zuurix's Homepage</h1>
