--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Zuurix's Homepage
 ---
 <div class="blurb">
-	<h1>Zuurix's Homepage</h1>
+	<h1>Zuurix.com</h1>
 	<p>Home for awesome indie games</p>
 </div><!-- /.blurb -->
