--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Zuurix's Homepage
 ---
 <div class="blurb">
 	<h1>Zuurix.com</h1>
-	<p>Home for awesome indie games</p>
+	<p>Home for awesome indie games created by Zuurix</p>
 </div><!-- /.blurb -->
