--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Zuurix.com
 ---
 <div class="blurb">
-	<h1>Zuurix.com</h1>
-	<p>Home for awesome indie games created by Zuurix</p>
+	<h1>Zuurix.com/Home</h1>
+	<p>Welcome to Zuurix.com - home for awesome indie games created by Zuurix!</p>
 </div><!-- /.blurb -->
