--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Zuurix.com/Home
+title: Home
 ---
 <div class="blurb">
 	<h1>Zuurix.com/Home</h1>
-	<p>Welcome to Zuurix.com - home for awesome indie games created by Zuurix!</p>
+	<p>Welcome to Zuurix.com - home for awesome indie games created by Zuurix</p>
 </div><!-- /.blurb -->
