--- a/games/index.html
+++ b/games/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Zuurix.com/Games
+title: Zuurix.com - Games
 ---
 <div class="blurb">
-	<h1>Zuurix.com/Games</h1>
+	<h1>Games</h1>
 	<p></p>
 </div><!-- /.blurb -->
