--- a/about/index.html
+++ b/about/index.html
@@ -4,5 +4,12 @@ title: Zuurix.com - About
 ---
 <div class="blurb">
 	<h1>About</h1>
+	
+	<h1>Home</h1>
+	<p>'Ello! I am Ivar, also known as indie game developer Zuurix.</p>
+	<p>I am officially making games since 2013, but pretended to be game developer ever since I started using computer.</p>
+	<p>How does one pretend to be game developer? It's simple: Open MS Paint and make game graphics - enemies, items, quests logs.</p>
+	<p></p>
+	
 	<p></p>
 </div><!-- /.blurb -->
