--- a/about/index.html
+++ b/about/index.html
@@ -4,12 +4,9 @@ title: Zuurix.com - About
 ---
 <div class="blurb">
 	<h1>About</h1>
-	
-	<h1>Home</h1>
 	<p>'Ello! I am Ivar, also known as indie game developer Zuurix.</p>
 	<p>I am officially making games since 2013, but pretended to be game developer ever since I started using computer.</p>
-	<p>How does one pretend to be game developer? It's simple: Open MS Paint and make game graphics - enemies, items, quests logs.</p>
-	<p></p>
-	
-	<p></p>
+	<p>How does one pretend to be game developer? It's simple: Open MS paint and draw inventory screens, enemies, quest logs...</p>
+	<p>I used to do it for hours every day, until I have decided that it's time to stop faking and start making real games.</p>
+	<p>Years have passed and now I proudly call myself game developer.</p>
 </div><!-- /.blurb -->
