--- a/about/index.html
+++ b/about/index.html
@@ -4,20 +4,10 @@ title: Zuurix.com - About
 ---
 <div class="blurb">
 	<h1>About</h1>
-	<p>'Ello! I am Ivar, also known as an independent game developer Zuurix.</p>
-	<p>I am 21 years old and I am from Lithuania, which explains all the grammar errors.</p>
-	<p></p>
-	<p>I am officially making games since 2013, but I pretended to be game developer ever since I started using computer.</p>
-	<p>How does one pretend to be game developer? It's simple: Open MS Paint and draw inventory screens, enemies, quest logs...</p>
-	<p>I used to do it for hours every day, until I have decided that it's time to stop faking and start making real games.</p>
-	<p>Years have passed and now I proudly call myself game developer.</p>
-	<p></p>
-	<p>I have made four big games so far. Usually I work alone on my games, because I'm not a team guy.</p>
-	<p>My goal is to make great games and I hope that in future my games will be well known.</p>
-	<p>My biggest strength is my unwavering motivation. I never give up.</p>
-	<p></p>
+	<p>'Ello! I am Ivar, also known as an independent game developer Zuurix. I am 21 years old and I am from Lithuania, which explains all the grammar errors.</p>
+	<p>I am officially making games since 2013, but I pretended to be game developer ever since I started using computer. How does one pretend to be game developer? It's simple: Open MS Paint and draw inventory screens, enemies, quest logs... I used to do it for hours every day, until I have decided that it's time to stop faking and start making real games. Years have passed and now I proudly call myself game developer.</p>
+	<p>I have made four big games so far. Usually I work alone on my games, because I'm not a team guy. My goal is to make great games and I hope that in future my games will be well known. My biggest strength is my unwavering motivation. I never give up.</p>
 	<p>I love role-playing, tower defense and collectible card games, fantasy books, spaceships, magic, cats, Two Steps From Hell music and talking with my players.</p>
 	<p>I hate old stuff, anime, unoriginality and everything that has something to do with beetroots.</p>
-	<p></p>
 	<p>Oh, and sometimes I use 'Ello instead of Hello. Strange habit, I know.</p>
 </div><!-- /.blurb -->
