--- a/games/index.html
+++ b/games/index.html
@@ -7,8 +7,8 @@ title: Zuurix.com - Games
 	<p>Sector Six</p>
 	<p>Lur</p>
 	<p>Sector Seven</p>
-	<p></p>
-	<p></p>
+	<p>Zuuland</p>
+	<p>The Name of the Demon</p>
 	<p>Beyond the Gate</p>
 	<p>The Cursed Legion</p>
 	<p>Run Out</p>
