--- a/games/index.html
+++ b/games/index.html
@@ -4,12 +4,47 @@ title: Zuurix.com - Games
 ---
 <div class="blurb">
 	<h1>Games</h1>
+	
 	<p>Sector Six</p>
+	<a>Elegant and innovative RPG/shoot'em up hybrid. My best game.</a>
+	<a>RPG, shoot 'em up</a>
+	<a>Status: Beta</a>
+	
 	<p>Lur</p>
+	<a>It's not pretty or fun, but it's large. My first big RPG.</a>
+	<a>RPG</a>
+	<a>Status: Completed</a>
+	
 	<p>Sector Seven</p>
+	<a>Shoot 'em up with light RPG elements. My second game and Sector Six prototype.</a>
+	<a>Shoot 'em up</a>
+	<a>Status: Completed</a>
+	
 	<p>Zuuland</p>
+	<a>My first game.</a>
+	<a>RPG</a>
+	<a>Status: Completed</a>
+	
+	<h1>Side projects</h1>
+	
 	<p>The Name of the Demon</p>
+	<a>Explore the world as a demon and unlock the power of your name. Short competition game.</a>
+	<a>RPG</a>
+	<a>Status: Completed</a>
+	
 	<p>Beyond the Gate</p>
+	<a>Explore millions of worlds beyond the Gate. Short competition game.</a>
+	<a>RPG</a>
+	<a>Status: Completed</a>
+	
 	<p>The Cursed Legion</p>
+	<a>Become the leader of the Cursed Legion and restore it to the former glory. Features art by my brother.</a>
+	<a>CCG</a>
+	<a>Status: Alpha</a>
+	
 	<p>Run Out</p>
+	<a>Earth is gone. Can you bring it back?</a>
+	<a>Episodic RPG</a>
+	<a>Status: Alpha</a>
+
 </div><!-- /.blurb -->
