--- a/games/index.html
+++ b/games/index.html
@@ -5,46 +5,44 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
-	<p>Sector Six</p>
-	<a>Elegant and innovative RPG/shoot'em up hybrid. My best game.</a>
-	<a>RPG, shoot 'em up</a>
-	<a>Status: Beta</a>
+	<h2>Sector Six</h2>
+	<p>Elegant and innovative RPG/shoot'em up hybrid. My best game.</p>
+	<p>RPG, shoot 'em up</p>
+	<p>Status: Beta</p>
 	
-	<p>Lur</p>
-	<a>It's not pretty or fun, but it's large. My first big RPG.</a>
-	<a>RPG</a>
-	<a>Status: Completed</a>
+	<h2>Lur</h2>
+	<p>It's not pretty or fun, but it's large. My first big RPG.</p>
+	<p>RPG</p>
+	<p>Status: Completed</p>
 	
-	<p>Sector Seven</p>
-	<a>Shoot 'em up with light RPG elements. My second game and Sector Six prototype.</a>
-	<a>Shoot 'em up</a>
-	<a>Status: Completed</a>
+	<h2>Sector Seven</h2>
+	<p>Shoot 'em up with light RPG elements. My second game and Sector Six prototype.</p>
+	<p>Shoot 'em up</p>
+	<p>Status: Completed</p>
 	
-	<p>Zuuland</p>
-	<a>My first game.</a>
-	<a>RPG</a>
-	<a>Status: Completed</a>
+	<h2>Zuuland</h2>
+	<p>My first game.</p>
+	<p>RPG</p>
+	<p>Status: Completed</p>
 	
-	<h1>Side projects</h1>
+	<h2>The Name of the Demon</h2>
+	<p>Explore the world as a demon and unlock the power of your name. Short competition game.</p>
+	<p>RPG</p>
+	<p>Status: Completed</p>
 	
-	<p>The Name of the Demon</p>
-	<a>Explore the world as a demon and unlock the power of your name. Short competition game.</a>
-	<a>RPG</a>
-	<a>Status: Completed</a>
+	<h2>Beyond the Gate</h2>
+	<p>Explore millions of worlds beyond the Gate. Short competition game.</p>
+	<p>RPG</p>
+	<p>Status: Completed</p>
 	
-	<p>Beyond the Gate</p>
-	<a>Explore millions of worlds beyond the Gate. Short competition game.</a>
-	<a>RPG</a>
-	<a>Status: Completed</a>
+	<h2>The Cursed Legion</h2>
+	<p>Become the leader of the Cursed Legion and restore it to the former glory. Features art by my brother.</p>
+	<p>CCG</p>
+	<p>Status: Alpha</p>
 	
-	<p>The Cursed Legion</p>
-	<a>Become the leader of the Cursed Legion and restore it to the former glory. Features art by my brother.</a>
-	<a>CCG</a>
-	<a>Status: Alpha</a>
-	
-	<p>Run Out</p>
-	<a>Earth is gone. Can you bring it back?</a>
-	<a>Episodic RPG</a>
-	<a>Status: Alpha</a>
+	<h2>Run Out</h2>
+	<p>Earth is gone. Can you bring it back?</p>
+	<p>Episodic RPG</p>
+	<p>Status: Alpha</p>
 
 </div><!-- /.blurb -->
