--- a/games/index.html
+++ b/games/index.html
@@ -10,49 +10,35 @@ title: Zuurix.com - Games
 	<p>RPG, shoot 'em up</p>
 	<p>Status: Beta</p>
 	
-	<hr>
-	
 	<h2>Lur</h2>
-	<p>It's not pretty or fun, but it's large. My first big RPG.</p>
+	<p>It's nor pretty nor fun, but it's large. My first big RPG.</p>
 	<p>RPG</p>
 	<p>Status: Completed</p>
-	
-	<hr>
 	
 	<h2>Sector Seven</h2>
 	<p>Shoot 'em up with light RPG elements. My second game and Sector Six prototype.</p>
 	<p>Shoot 'em up</p>
 	<p>Status: Completed</p>
 	
-	<hr>
-	
 	<h2>Zuuland</h2>
 	<p>My first game.</p>
 	<p>RPG</p>
 	<p>Status: Completed</p>
-	
-	<hr>
 	
 	<h2>The Name of the Demon</h2>
 	<p>Explore the world as a demon and unlock the power of your name. Short competition game.</p>
 	<p>RPG</p>
 	<p>Status: Completed</p>
 	
-	<hr>
-	
 	<h2>Beyond the Gate</h2>
 	<p>Explore millions of worlds beyond the Gate. Short competition game.</p>
 	<p>RPG</p>
 	<p>Status: Completed</p>
 	
-	<hr>
-	
 	<h2>The Cursed Legion</h2>
 	<p>Become the leader of the Cursed Legion and restore it to the former glory. Features art by my brother.</p>
 	<p>CCG</p>
 	<p>Status: Alpha</p>
-	
-	<hr>
 	
 	<h2>Run Out</h2>
 	<p>Earth is gone. Can you bring it back?</p>
