--- a/games/index.html
+++ b/games/index.html
@@ -7,42 +7,7 @@ title: Zuurix.com - Games
 	
 	<h2>Sector Six</h2>
 	<p>Elegant and innovative RPG/shoot'em up hybrid. My best game.</p>
-	<p>RPG, shoot 'em up</p>
-	<p>Status: Beta</p>
+	<h3>RPG, shoot 'em up</h3>
+	<h3>Status: Beta</h3>
 	
-	<h2>Lur</h2>
-	<p>It's nor pretty nor fun, but it's large. My first big RPG.</p>
-	<p>RPG</p>
-	<p>Status: Completed</p>
-	
-	<h2>Sector Seven</h2>
-	<p>Shoot 'em up with light RPG elements. My second game and Sector Six prototype.</p>
-	<p>Shoot 'em up</p>
-	<p>Status: Completed</p>
-	
-	<h2>Zuuland</h2>
-	<p>My first game.</p>
-	<p>RPG</p>
-	<p>Status: Completed</p>
-	
-	<h2>The Name of the Demon</h2>
-	<p>Explore the world as a demon and unlock the power of your name. Short competition game.</p>
-	<p>RPG</p>
-	<p>Status: Completed</p>
-	
-	<h2>Beyond the Gate</h2>
-	<p>Explore millions of worlds beyond the Gate. Short competition game.</p>
-	<p>RPG</p>
-	<p>Status: Completed</p>
-	
-	<h2>The Cursed Legion</h2>
-	<p>Become the leader of the Cursed Legion and restore it to the former glory. Features art by my brother.</p>
-	<p>CCG</p>
-	<p>Status: Alpha</p>
-	
-	<h2>Run Out</h2>
-	<p>Earth is gone. Can you bring it back?</p>
-	<p>Episodic RPG</p>
-	<p>Status: Alpha</p>
-
 </div><!-- /.blurb -->
