--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -5,17 +5,17 @@ title: Zuurix.com - Home
 <div class="blurb">
 	<h1>Sector Six press kit</h1>
 	
+	<p>Developer</p>
+
 	<p>
-Developer
-
-Publisher
-
 Aivaras Klimas, a.k.a. Zuurix
 Website: http://gamesbyzuurix.weebly.com/
 ​Facebook: https://www.facebook.com/Games-by-Zuurix-1417183375191866/
 ​Twitter: ​https://twitter.com/DeveloperZuurix
+	
+	
 The Freekshow
-Website: ​http://www.freekshow.de/
+Website: http://www.freekshow.de/
 Availability
 
 Press contact
@@ -56,5 +56,6 @@ Crafting system and shops
 Devastating bosses
 	</p>
 	
-	<img>http://i.imgur.com/4EATdJT.png</img>
+	<img>http://i.imgur.com/4EATdJT.png<img>
+
 </div><!-- /.blurb -->
