--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -55,7 +55,8 @@ Local co-op mode
 Crafting system and shops
 Devastating bosses
 		
-	<img>http://i.imgur.com/4EATdJT.png<img>
 	</p>
+	
+	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" /></a>
 
 </div><!-- /.blurb -->
