--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -5,57 +5,8 @@ title: Zuurix.com - Home
 <div class="blurb">
 	<h1>Sector Six press kit</h1>
 	
-	<p>Developer</p>
-
-	<p>
-Aivaras Klimas, a.k.a. Zuurix
-Website: http://gamesbyzuurix.weebly.com/
-​Facebook: https://www.facebook.com/Games-by-Zuurix-1417183375191866/
-​Twitter: ​https://twitter.com/DeveloperZuurix
+	<h2>Developer</h2> <h2>Publisher</h2>
 	
-	
-The Freekshow
-Website: http://www.freekshow.de/
-Availability
-
-Press contact
-
-Platforms: Windows, Linux
-Stores: Steam
-​Price: 9.99 EUR
-​Aivaras Klimas
-Email: gamesbyzuurix@gmail.com
-Description
-
-Sector Six is an elegant and innovative sci-fi RPG and shoot 'em up hybrid.
-
-Create
-As you play the game, you receive procedurally generated parts and experience. Parts is what you build your spaceship from and experience allows you to level up. Leveling up increases amount of parts you can add to your spaceship and gives ability points, which can be used to unlock and upgrade combat abilities.
-
-Destroy
-Once you are done with upgrading, equipping, modifying, refilling and optimizing your spaceship, it's time to test it in a fight! Choose one of many available missions to instantly jump into combat. Missions are procedurally generated, you will never know which enemies you will encounter next. There are many enemies in Sector Six, each comes with it's own set of abilities, strengths and weaknesses.
-Defeat them by dodging their projectiles and firing weapons on your spaceship by activating equipped abilities.
-
-Repeat
-You destroyed enemies, mission accomplished! Time to upgrade your spaceship again and start another mission. But which part your will add your spaceship? Will you refill your alloy container? Will you upgrade your weapons with amplifier? Will you choose weapon over defensive part? Which new ability you will unlock? Which mission will you choose? Story mission? Boss mission? Kill mission? Will you try to complete escort mission with increased difficulty? Will you try to resurrect destroyed region or secure region that is currently under siege? Innovative Sector Six systems will constantly provide hundreds of opportunities to keep creation and destruction fresh!
-Features
-
-Story driven missions including cutscenes and dialog 
-Unique silhouette art style 
-Fun and complex combat 
-Deep character customization 
-Millions of randomly generated items
-Ability to choose your own difficulty with modular difficulty system
-Steam leaderboards and achievements
-
-Planned:
-
-Controller support
-Local co-op mode
-Crafting system and shops
-Devastating bosses
-		
-	</p>
 	
 	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" /></a>
 
