--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -5,9 +5,14 @@ title: Zuurix.com - Home
 <div class="blurb">
 	<h1>Sector Six press kit</h1>
 	
-	<h2>Developer</h2> <h2>Publisher</h2>
+	<h2>Developer</h2> 
 	
+	<h2>Publisher</h2>
+	
+	<h2>Images</h2>
 	
 	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" /></a>
 
 </div><!-- /.blurb -->
