--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -8,12 +8,10 @@ title: Zuurix.com - Home
 	<h2>Developer</h2> 
 	
 	<ul>
-	<li>
-	Aivaras Klimas, a.k.a. Zuurix
-	Website: http://gamesbyzuurix.weebly.com/
-	Facebook: https://www.facebook.com/Games-by-Zuurix-1417183375191866/
-	Twitter: https://twitter.com/DeveloperZuurix
-	</li>
+	<li>Aivaras Klimas, a.k.a. Zuurix</li>
+	<li>Website: http://gamesbyzuurix.weebly.com/</li>
+	<li>Facebook: https://www.facebook.com/Games-by-Zuurix-1417183375191866/</li>
+	<li>Twitter: https://twitter.com/DeveloperZuurix</li>
 	</ul>
 	
 	<h2>Publisher</h2>
