--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Zuurix.com - Home
+title: Zuurix.com - Sector Six press kit
 ---
 <div class="blurb">
 	<h1>Sector Six press kit</h1>
