--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -7,7 +7,7 @@ title: Zuurix.com - Sector Six press kit
 	
 	<h2>Developer</h2> 
 	
-	<ul>
+	<ul style="list-style-type:none">
 	<li>Aivaras Klimas, a.k.a. Zuurix</li>
 	<li>Website: http://gamesbyzuurix.weebly.com/</li>
 	<li>Facebook: https://www.facebook.com/Games-by-Zuurix-1417183375191866/</li>
