--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -18,8 +18,8 @@ title: Zuurix.com - Sector Six press kit
 	
 	<h2>Images</h2>
 	
-	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" /></a>
+	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" align="middle"/></a>
 	
-	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" /></a>
+	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" align="middle"/></a>
 
 </div><!-- /.blurb -->
