--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -8,13 +8,43 @@ title: Zuurix.com - Sector Six press kit
 	<h2>Developer</h2> 
 	
 	<ul style="list-style-type:none">
-	<li>Aivaras Klimas, a.k.a. Zuurix</li>
-	<li>Website: http://gamesbyzuurix.weebly.com/</li>
+	<li>Zuurix</li>
+	<li>Website: https://zuurix.github.io/</li>
 	<li>Facebook: https://www.facebook.com/Games-by-Zuurix-1417183375191866/</li>
 	<li>Twitter: https://twitter.com/DeveloperZuurix</li>
 	</ul>
 	
 	<h2>Publisher</h2>
+	
+	<ul style="list-style-type:none">
+
+	<li>The Freekshow</li>
+	<li>Website: http://www.freekshow.de/</li>
+
+	</ul>
+	
+	<h2>Availability</h2>
+	
+	<ul style="list-style-type:none">
+
+	<li>Platforms: Windows, Linux</li>
+	<li>Stores: Steam</li>
+	<li>Price: 9.99 EUR</li>
+
+	</ul>
+	
+	<h2>Press contact</h2>
+	
+	<ul style="list-style-type:none">
+
+	<li>Aivaras Klimas</li>
+	<li>Email: gamesbyzuurix@gmail.com</li>
+
+	</ul>
+	
+	<h2>Description</h2>
+	
+	<p><i>Create.</i> As you play the game, you receive procedurally generated parts and experience. Parts is what you build your spaceship from and experience allows you to level up. Leveling up increases amount of parts you can add to your spaceship and gives ability points, which can be used to unlock and upgrade combat abilities.</p>
 	
 	<h2>Images</h2>
 	
