--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -9,9 +9,9 @@ title: Zuurix.com - Sector Six press kit
 	
 	<ul style="list-style-type:none">
 	<li>Zuurix</li>
-	<li>Website: https://zuurix.github.io/</li>
-	<li>Facebook: https://www.facebook.com/Games-by-Zuurix-1417183375191866/</li>
-	<li>Twitter: https://twitter.com/DeveloperZuurix</li>
+	<li><b>Website:</b> https://zuurix.github.io/</li>
+	<li><b>Facebook:</b> https://www.facebook.com/Games-by-Zuurix-1417183375191866/</li>
+	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
 	</ul>
 	
 	<h2>Publisher</h2>
@@ -19,7 +19,7 @@ title: Zuurix.com - Sector Six press kit
 	<ul style="list-style-type:none">
 
 	<li>The Freekshow</li>
-	<li>Website: http://www.freekshow.de/</li>
+	<li><b>Website:</b> http://www.freekshow.de/</li>
 
 	</ul>
 	
@@ -27,9 +27,9 @@ title: Zuurix.com - Sector Six press kit
 	
 	<ul style="list-style-type:none">
 
-	<li>Platforms: Windows, Linux</li>
-	<li>Stores: Steam</li>
-	<li>Price: 9.99 EUR</li>
+	<li><b>Platforms:</b> Windows, Linux</li>
+	<li><b>Stores:</b> Steam</li>
+	<li><b>Price:</b> 9.99 EUR</li>
 
 	</ul>
 	
@@ -38,13 +38,17 @@ title: Zuurix.com - Sector Six press kit
 	<ul style="list-style-type:none">
 
 	<li>Aivaras Klimas</li>
-	<li>Email: gamesbyzuurix@gmail.com</li>
+	<li><b>Email:</b> gamesbyzuurix@gmail.com</li>
 
 	</ul>
 	
 	<h2>Description</h2>
 	
 	<p><i>Create.</i> As you play the game, you receive procedurally generated parts and experience. Parts is what you build your spaceship from and experience allows you to level up. Leveling up increases amount of parts you can add to your spaceship and gives ability points, which can be used to unlock and upgrade combat abilities.</p>
+	
+	<p><i>Destroy.</i>Once you are done with upgrading, equipping, modifying, refilling and optimizing your spaceship, it's time to test it in a fight! Choose one of many available missions to instantly jump into combat. Missions are procedurally generated, you will never know which enemies you will encounter next. There are many enemies in Sector Six, each comes with it's own set of abilities, strengths and weaknesses. Defeat them by dodging their projectiles and firing weapons on your spaceship by activating equipped abilities.</p>
+	
+	<p><i>Repeat.</i>You destroyed enemies, mission accomplished! Time to upgrade your spaceship again and start another mission. But which part your will add your spaceship? Will you refill your alloy container? Will you upgrade your weapons with amplifier? Will you choose weapon over defensive part? Which new ability you will unlock? Which mission will you choose? Story mission? Boss mission? Kill mission? Will you try to complete escort mission with increased difficulty? Will you try to resurrect destroyed region or secure region that is currently under siege? Innovative Sector Six systems will constantly provide hundreds of opportunities to keep creation and destruction fresh!</p>
 	
 	<h2>Images</h2>
 	
