--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -50,6 +50,10 @@ title: Zuurix.com - Sector Six press kit
 	
 	<p><i>Repeat.</i> You destroyed enemies, mission accomplished! Time to upgrade your spaceship again and start another mission. But which part your will add your spaceship? Will you refill your alloy container? Will you upgrade your weapons with amplifier? Will you choose weapon over defensive part? Which new ability you will unlock? Which mission will you choose? Story mission? Boss mission? Kill mission? Will you try to complete escort mission with increased difficulty? Will you try to resurrect destroyed region or secure region that is currently under siege? Innovative Sector Six systems will constantly provide hundreds of opportunities to keep creation and destruction fresh!</p>
 	
+	<h2>Trailer</h2>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/Ed_YHdoMU-E" frameborder="0" allowfullscreen></iframe>
+	
 	<h2>Images</h2>
 	
 	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" align="middle"/></a>
