--- a/Sector-Six-press-kit/index.html
+++ b/Sector-Six-press-kit/index.html
@@ -29,7 +29,7 @@ title: Zuurix.com - Sector Six press kit
 
 	<li><b>Platforms:</b> Windows, Linux</li>
 	<li><b>Stores:</b> Steam</li>
-	<li><b>Price:</b> 9.99 EUR</li>
+	<li><b>Price:</b> 9.99 €</li>
 
 	</ul>
 	
