--- a/games/index.html
+++ b/games/index.html
@@ -7,7 +7,8 @@ title: Zuurix.com - Games
 	
 	<h2>Sector Six</h2>
 	<p>Elegant and innovative RPG/shoot'em up hybrid. My best game.</p>
-	<h3><div>RPG</div><div>Shoot 'Em Up</div></h3>
+	<h3>RPG</h3>
+	<h3>Shoot 'Em Up</h3>
 	<h3>Status: Beta</h3>
 	
 </div><!-- /.blurb -->
