--- a/games/index.html
+++ b/games/index.html
@@ -8,7 +8,7 @@ title: Zuurix.com - Games
 	<h2>Sector Six</h2>
 	<p>Elegant and innovative RPG/shoot'em up hybrid. My best game.</p>
 	<h3>RPG</h3>
-	<h3>Shoot 'Em Up</h3>
+	<h3><span class="box">Shoot 'Em Up</span></h3>
 	<h3>Status: Beta</h3>
 	
 </div><!-- /.blurb -->
