--- a/games/index.html
+++ b/games/index.html
@@ -8,6 +8,6 @@ title: Zuurix.com - Games
 	<h2>Sector Six</h2>
 	<h3><span class="status-beta">Status: Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h3>
 	<p>Elegant and innovative RPG/shoot'em up hybrid. My best game.</p>
-	<basic-button>Download</basic-button>
-	<basic-button>Press kit</basic-button>
+	<zbutton>Download</zbutton>
+	<zbutton>Press kit<zbutton>
 </div><!-- /.blurb -->
