--- a/games/index.html
+++ b/games/index.html
@@ -8,6 +8,12 @@ title: Zuurix.com - Games
 	<h2>Sector Six</h2>
 	<h3><span class="status-beta">Status: Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h3>
 	<p>Elegant and innovative RPG/shoot'em up hybrid. My best game.</p>
-	<zbutton>Download</zbutton>
-	<zbutton>Press kit<zbutton>
+	
+	<zbutton>
+    	<ul>
+        	<li><a href="#">Download</a></li>
+		<li><a href="#">Press kit</a></li>
+    	</ul>
+	</zbutton>
+	
 </div><!-- /.blurb -->
