--- a/games/index.html
+++ b/games/index.html
@@ -7,13 +7,6 @@ title: Zuurix.com - Games
 	
 	<h2>Sector Six</h2>
 	<h3><span class="status-beta">Status: Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h3>
-	<p>Elegant and innovative RPG/shoot'em up hybrid. My best game.</p>
-	
-	<zbutton>
-    	<ul>
-        	<li><a href="#">Download</a></li>
-		<li><a href="#">Press kit</a></li>
-    	</ul>
-	</zbutton>
+	<p>Elegant and innovative RPG/shoot'em up hybrid.</p>
 	
 </div><!-- /.blurb -->
