--- a/games/index.html
+++ b/games/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - Games
 	<h1>Games</h1>
 	
 	<h2>Sector Six</h2>
-	<h3><span class="status-beta">Status: Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h3>
+	<h3><span class="status-beta">Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h3>
 	<p>Elegant and innovative RPG/shoot'em up hybrid.</p>
 	
 </div><!-- /.blurb -->
