--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Zuurix.com - Home
 ---
 <div class="blurb">
 	<h1>Home</h1>
-	<p>Welcome to <i>Zuurix.com</i> - home for awesome indie games created by Zuurix</p>
+	<p>Welcome to home for awesome indie games created by Zuurix</p>
 </div><!-- /.blurb -->
