--- a/games/index.html
+++ b/games/index.html
@@ -5,8 +5,7 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
-	<h2>Sector Six</h2>
-	<h3><span class="status-beta">Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h3>
+	<h2>Sector Six<h3><span class="status-beta">Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h3></h2>
 	<p>Elegant and innovative RPG/shoot'em up hybrid.</p>
 	
 </div><!-- /.blurb -->
