--- a/games/index.html
+++ b/games/index.html
@@ -5,7 +5,12 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
-	<h2>Sector Six* <span class="status-beta" align="left">Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h2>
+	<h2>Sector Six</h2>
+	<h3><span class="status-beta" align="left">Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h3>
+	<p>Elegant and innovative RPG/shoot'em up hybrid.</p>
+	
+	<h2>Lur</h2>
+	<h3><span class="status-beta" align="left">Completed</span> <span class="box">RPG</span></h3>
 	<p>Elegant and innovative RPG/shoot'em up hybrid.</p>
 	
 </div><!-- /.blurb -->
