--- a/games/index.html
+++ b/games/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Games
 	<p>Elegant and innovative RPG/shoot'em up hybrid.</p>
 	
 	<h2>Lur</h2>
-	<h3><span class="status-beta" align="left">Completed</span> <span class="box">RPG</span></h3>
-	<p>Elegant and innovative RPG/shoot'em up hybrid.</p>
+	<h3><span class="status-completed" align="left">Completed</span> <span class="box">RPG</span></h3>
+	<p>Large scale RPG set in desolate world of Lur.</p>
 	
 </div><!-- /.blurb -->
