--- a/index.html
+++ b/index.html
@@ -5,4 +5,6 @@ title: Zuurix.com - Home
 <div class="blurb">
 	<h1>Home</h1>
 	<p>Welcome to home for awesome indie games created by Zuurix!</p>
+	<h1>News</h1>
+	<a href="#" class="myButton">Go to blog...</a>
 </div><!-- /.blurb -->
