--- a/games/index.html
+++ b/games/index.html
@@ -8,9 +8,6 @@ title: Zuurix.com - Games
 	<h2>Sector Six</h2>
 	<h3><span class="status-beta" align="left">Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h3>
 	<p>Elegant and innovative RPG/shoot'em up hybrid.</p>
-	
-	<h2>Lur</h2>
-	<h3><span class="status-completed" align="left">Completed</span> <span class="box">RPG</span></h3>
-	<p>Large scale RPG set in desolate world of Lur.</p>
+	<a href="http://store.steampowered.com/app/465020/" class="myButton">Buy</a>
 	
 </div><!-- /.blurb -->
