--- a/games/index.html
+++ b/games/index.html
@@ -10,4 +10,6 @@ title: Zuurix.com - Games
 	<p>Elegant and innovative RPG/shoot'em up hybrid.</p>
 	<a href="http://store.steampowered.com/app/465020/" class="myButton">Buy</a>
 	
+	{% include disqus.html %}
+	
 </div><!-- /.blurb -->
