--- a/games/index.html
+++ b/games/index.html
@@ -5,10 +5,7 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
-	<h2>Sector Six</h2>
-	<h3><span class="status-beta" align="left">Beta</span> <span class="box">RPG</span> <span class="box">Shoot 'Em Up</span></h3>
-	<p>Elegant and innovative RPG/shoot'em up hybrid.</p>
-	<a href="http://store.steampowered.com/app/465020/" class="myButton">Buy</a>
+	<p>Under construction</p>
 	
 	{% include disqus.html %}
 	
