--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@ title: Zuurix.com - Home
 <div class="blurb">
 	<h1>Home</h1>
 	<p>Welcome to home for awesome indie games created by Zuurix!</p>
-	<a href="http://store.steampowered.com/app/465020/" class="Play games >">Buy</a> <a href="http://store.steampowered.com/app/465020/" class="Read news >">Buy</a>
 </div><!-- /.blurb -->
+<a href="https://zuurix.github.io/games/" class="myButton">Play games ></a>
+<a href="https://zuurix.github.io/blog/" class="myButton">Read news ></a>
