--- a/games/index.html
+++ b/games/index.html
@@ -5,7 +5,10 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
-	<p>Under construction</p>
+	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>
+	
+	<a href="http://store.steampowered.com/app/465020" class="myButton">Buy ></a>
+	<a href="https://zuurix.github.io/sector-six-press-kit/" class="myButton">Press kit ></a>
 	
 	{% include disqus.html %}
 	
