--- a/games/index.html
+++ b/games/index.html
@@ -5,6 +5,7 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
+	<p><b>Sector Six</b></p>
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>
 	
 	<a href="http://store.steampowered.com/app/465020" class="myButton">Buy ></a>
