--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -60,6 +60,13 @@ title: Zuurix.com - Sector Six press kit
 	
 	<p><i>Repeat.</i> You destroyed enemies, mission accomplished! Time to upgrade your spaceship again and start another mission. But which part your will add your spaceship? Will you refill your alloy container? Will you upgrade your weapons with amplifier? Will you choose weapon over defensive part? Which new ability you will unlock? Which mission will you choose? Story mission? Boss mission? Kill mission? Will you try to complete escort mission with increased difficulty? Will you try to resurrect destroyed region or secure region that is currently under siege? Innovative Sector Six systems will constantly provide hundreds of opportunities to keep creation and destruction fresh!</p>
 	
+	<h2>Story</h2>
+	
+	<p>The Universe exists in layers, called Sectors. Sector Six, the youngest of the Sectors is under attack by massive automatic spaceships called the Machines. They are moving across the Sector Six, destroying everything in their way.</p>
+	<p>You are Azimar, member of the Negati Armada that is the only thing that delays the complete destruction Sector Six.</p>
+	<p>One day, you are sent to protect the carrier of the mysterious artifact, that is as powerful and ancient as the Machines.</p>
+	<p>After dramatic chain of events, you become the carrier of the artifact and it's up to you to unlock its power and save Sector Six.</p>
+	
 	<h2>Trailer</h2>
 	
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/Ed_YHdoMU-E" frameborder="0" allowfullscreen></iframe>
