--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -42,16 +42,6 @@ title: Zuurix.com - Sector Six press kit
 
 	</ul>
 	
-	<h2>Screenshots</h2>
-	
-	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" /></a>
-	
-	<a href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" /></a>
-	
-	<a href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" /></a>
-	
-	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" /></a>
-	
 	<h2>Description</h2>
 	
 	<p><i>Create.</i> As you play the game, you receive procedurally generated parts and experience. Parts is what you build your spaceship from and experience allows you to level up. Leveling up increases amount of parts you can add to your spaceship and gives ability points, which can be used to unlock and upgrade combat abilities.</p>
@@ -71,10 +61,25 @@ title: Zuurix.com - Sector Six press kit
 	
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/Ed_YHdoMU-E" frameborder="0" allowfullscreen></iframe>
 	
+	<h2>Screenshots</h2>
+	
+	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" /></a>
+	
+
 	<h2>Images</h2>
 	
-	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" align="middle"/></a>
+	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" align="center"/></a>
 	
-	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" align="middle"/></a>
-
+	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" align="center"/></a>
+	
+	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" align="center"/></a>
+	
+	<a href="http://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" align="center"/></a>
+	
 </div><!-- /.blurb -->
