--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -52,7 +52,7 @@ title: Zuurix.com - Sector Six press kit
 	
 	<h2>Story</h2>
 	
-	<p>The Universe exists in layers, called Sectors. Sector Six, the youngest of the Sectors is under attack by massive automatic spaceships called the Machines. They are moving across the Sector Six, destroying everything in their way.</p>
+	<p>The Universe exists in layers, called Sectors. Sector Six, the youngest of the Sectors is under attack by the Machines, massive automatic spaceships. They are moving across the Sector Six, destroying everything in their way.</p>
 	<p>You are Azimar, you are fighter of the Negati Armada that is the only thing that delays the complete destruction Sector Six.</p>
 	<p>One day, you are sent to protect the carrier of the mysterious artifact, that is as powerful and ancient as the Machines.</p>
 	<p>After dramatic chain of events, you become the carrier of the artifact and it's up to you to unlock its power and save Sector Six.</p>
@@ -77,8 +77,6 @@ title: Zuurix.com - Sector Six press kit
 	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" align="center"/></a>
 	
 	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" align="center"/></a>
-	
-	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" align="center"/></a>
 	
 	<a href="http://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" align="center"/></a>
 	
