--- a/games/index.html
+++ b/games/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - Games
 	<h1>Games</h1>
 	
 	<h2>Sector Six</h2>
-	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>
+	<a href="http://imgur.com/7ySqJck"><img src="http://i.imgur.com/7ySqJck.png" title="source: imgur.com" width="270" height="270"/></a><p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>
 	
 	<a href="http://store.steampowered.com/app/465020" class="myButton">Buy ></a>
 	<a href="https://zuurix.github.io/sector-six-press-kit/" class="myButton">Press kit ></a>
