--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -80,4 +80,24 @@ title: Zuurix.com - Sector Six press kit
 	
 	<a href="http://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" align="center"/></a>
 	
+	<a href="http://imgur.com/8AVlbze"><img src="http://i.imgur.com/8AVlbze.png" title="source: imgur.com" align="center"/></a>
+	
+	<a href="http://imgur.com/H7kUcFO"><img src="http://i.imgur.com/H7kUcFO.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/x0nxfnx"><img src="http://i.imgur.com/x0nxfnx.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/prIisV9"><img src="http://i.imgur.com/prIisV9.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/I4Fdhww"><img src="http://i.imgur.com/I4Fdhww.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/Zu7oafJ"><img src="http://i.imgur.com/Zu7oafJ.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/kp5dS0l"><img src="http://i.imgur.com/kp5dS0l.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/v5g25bh"><img src="http://i.imgur.com/v5g25bh.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/WedyI0i"><img src="http://i.imgur.com/WedyI0i.png" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/6rQ5MgZ"><img src="http://i.imgur.com/6rQ5MgZ.png" title="source: imgur.com" /></a>
+	
 </div><!-- /.blurb -->
