--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -74,13 +74,13 @@ title: Zuurix.com - Sector Six press kit
 
 	<h2>Images</h2>
 	
-	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" align="center"/></a>
+	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" align="center"/></a>
+	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" align="center"/></a>
+	<a href="http://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/8AVlbze"><img src="http://i.imgur.com/8AVlbze.png" title="source: imgur.com" align="center"/></a>
+	<a href="http://imgur.com/8AVlbze"><img src="http://i.imgur.com/8AVlbze.png" title="source: imgur.com" /></a>
 	
 	<a href="http://imgur.com/H7kUcFO"><img src="http://i.imgur.com/H7kUcFO.png" title="source: imgur.com" /></a>
 	
