Added transparent Zuurix logo image

--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -99,5 +99,7 @@ title: Zuurix.com - Sector Six press kit
 	<a href="http://imgur.com/WedyI0i"><img src="http://i.imgur.com/WedyI0i.png" title="source: imgur.com" /></a>
 	
 	<a href="http://imgur.com/6rQ5MgZ"><img src="http://i.imgur.com/6rQ5MgZ.png" title="source: imgur.com" /></a>
+
+        <a href="http://imgur.com/HE9VSOk"><img src="http://i.imgur.com/HE9VSOk.png" title="source: imgur.com" /></a>
 	
 </div><!-- /.blurb -->
