--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ title: Zuurix.com - Home
 	<p>Welcome to home for awesome indie games created by Zuurix!</p>
 </div><!-- /.blurb -->
 
+<h1>Blog</h1>
+
 <ul class="posts">
   	  {% for post in site.posts %}
           <span>{{ post.date | date_to_long_string }}</span>
