Home page update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Zuurix.com - Home
 ---
 <div class="blurb">
 	
-	<h1>Welcome to home for awesome indie games created by Zuurix!</h1>
+	<h1>Home</h1>
 
 <ul class="posts">
 	
