Updated "About" page

--- a/about/index.html
+++ b/about/index.html
@@ -3,12 +3,29 @@ layout: default
 title: Zuurix.com - About
 ---
 <div class="blurb">
-	<h1>About</h1>
+
+<h1>About</h1>
 	
-	<p>'Ello! I am Ivar, also known as an independent game developer Zuurix. I am 21 years old and I am from Lithuania, which explains all the grammar errors.</p>
-	<p>I am officially making games since 2013, but I pretended to be game developer ever since I started using a computer. How does one pretend to be a game developer? It's simple: Open MS Paint and draw inventory screens, enemies, quest logs... I used to do it for hours every day until I have decided that it's time to stop faking and start making real games. Years have passed and now I proudly call myself game developer.</p>
-	<p>I have made four big games so far. Usually, I work alone on my games because I'm not a team guy. My goal is to make innovative games and I hope that in future my games will be well known. My biggest strength is my unwavering motivation. I never give up.</p>
-	<p>I love role-playing, tower defense and collectible card games, fantasy books, spaceships, magic, cats, Two Steps From Hell music and talking with my players.</p>
-	<p>I hate old stuff, anime, unoriginality and everything that has something to do with beetroots.</p>
-	<p>Oh, and sometimes I use 'Ello instead of Hello. Strange habit, I know.</p>
+<p>'Ello! I am Ivar, also known as an independent game developer Zuurix. I am 21 years old and I am from Lithuania, which explains all the grammar errors =]
+
+<p>Ever since I have discovered the awesomeness that is computer games, I wanted to make my own.
+
+<p>Before I started developing games, I used to make drawings in MS Paint - quest logs, items, areas, monsters and other elements of a fictional game, that I pretended to be making.
+
+<p>After spending too much time doing that, I have realized that I need to start making real games.
+
+<p>I learned a bit of programming, found GameMaker: Studio and suddenly I became a game developer. I am still amused by a fact that I am able to make games!
+
+<p>Since I have begun making games, I have made 4 larger games and several smaller ones. Usually, I work alone on my games because I'm not a team guy and that means that I have to do almost everything myself.
+
+<p>Luckily I'm not that bad at programming and I can make acceptable graphics. 
+
+<p>My goal is to create modern, complex, enormous games and every day I am getting closer to achieving that goal. I am very dedicated to making my games and it's the thing that I enjoy doing most.
+
+<p>I also love playing fantasy or science fiction RPG's, CCG's and tower defense games, reading - again - fantasy or science fiction books, talking with people who play my games and listening to music by Two Steps From Hell.
+
+<p>I hate limitations, outdated things, unoriginality, and beetroots.
+
+<p>Oh, and sometimes I use 'Ello instead of Hello. Strange habit, I know.
+	
 </div><!-- /.blurb -->
