--- a/games/index.html
+++ b/games/index.html
@@ -5,7 +5,7 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
-	<p>Sector Six
+	<p>Sector Six</p>
 	
 	<a href="http://imgur.com/7ySqJck"><img src="http://i.imgur.com/7ySqJck.png" title="source: imgur.com" width="270" height="270"/></a><p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
