--- a/community/index.html
+++ b/community/index.html
@@ -2,6 +2,10 @@
 layout: default
 title: Zuurix.com - Community
 ---
-	<h1>Community</h1>
+<h1>Community</h1>
 
-	<p>Under construction</p>
+<p>Network</p>
+
+<li> <a href="https://www.facebook.com/GamesByZuurix/" title="Facebook page">{{ post.title }}</a></li>
+
+{% include disqus.html %}
