--- a/community/index.html
+++ b/community/index.html
@@ -6,6 +6,6 @@ title: Zuurix.com - Community
 
 <p>Network</p>
 
-<li> <a href="https://www.facebook.com/GamesByZuurix/" title="Facebook page">{{ post.title }}</a></li>
+<li> <a href=https://www.facebook.com/GamesByZuurix/ title="Facebook page"></a></li>
 
 {% include disqus.html %}
