--- a/community/index.html
+++ b/community/index.html
@@ -6,8 +6,6 @@ title: Zuurix.com - Community
 
 <p>Network</p>
 
-<ul> 
-<li> <a href="https://www.facebook.com/GamesByZuurix/" title="Facebook page"> </a> </li>
-</ul>
+<a href="https://www.facebook.com/GamesByZuurix/" title="Facebook page"> </a>
 
 {% include disqus.html %}
